--- a/package.json
+++ b/package.json
@@ -8,5 +8,6 @@
   "devDependencies": {
     "budo": "^7.0.0",
     "ghpages": "0.0.3"
-  }
+  },
+  "repository": "ngokevin/aframe-magicavoxel-projects"
 }
